Fix wrong alignment of checkmark in create data set dialog (#2122)

--- a/frontend/src/app/formly/types/repeat-chip/chip-dialog/chip-dialog.component.scss
+++ b/frontend/src/app/formly/types/repeat-chip/chip-dialog/chip-dialog.component.scss
@@ -1,4 +1,4 @@
-::ng-deep {
+::ng-deep ige-chip-dialog {
 
   .mat-list-base .mat-list-item {
 
